--- a/pom.xml
+++ b/pom.xml
@@ -105,4 +105,14 @@
 		</plugins>
 	</build>
 
+	<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-surefire-plugin</artifactId>
+  <version>3.2.5</version>
+  <configuration>
+    <forkedProcessTimeoutInSeconds>300</forkedProcessTimeoutInSeconds>
+  </configuration>
+</plugin>
+
+
 </project>
