--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
 			</plugin>
 		</plugins>
 	</build>
-
+<build>
 	<plugin>
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-surefire-plugin</artifactId>
@@ -113,6 +113,6 @@
     <forkedProcessTimeoutInSeconds>300</forkedProcessTimeoutInSeconds>
   </configuration>
 </plugin>
-
+</build>
 
 </project>
