--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>11</maven.compiler.release>
         <lombok.version>1.18.34</lombok.version>
+        <cucumber.report.dir>reports/cucumber-reports</cucumber.report.dir>
+        <extent.report.dir>reports/extent-reports</extent.report.dir>
     </properties>
 
     <dependencies>
@@ -114,7 +116,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Surefire Plugin for TestNG -->
+            <!-- Surefire Plugin for TestNG + Cucumber HTML output -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -122,7 +124,33 @@
                 <configuration>
                     <forkedProcessTimeoutInSeconds>300</forkedProcessTimeoutInSeconds>
                     <useSystemClassLoader>false</useSystemClassLoader>
+                    <systemPropertyVariables>
+                        <cucumber.report.dir>${cucumber.report.dir}</cucumber.report.dir>
+                        <extent.report.dir>${extent.report.dir}</extent.report.dir>
+                    </systemPropertyVariables>
                 </configuration>
+            </plugin>
+
+            <!-- Cucumber Maven Plugin for HTML report generation -->
+            <plugin>
+                <groupId>io.cucumber</groupId>
+                <artifactId>cucumber-maven-plugin</artifactId>
+                <version>7.15.0</version>
+                <executions>
+                    <execution>
+                        <id>run-cucumber-tests</id>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                        <configuration>
+                            <glue>stepdefinitions</glue>
+                            <features>src/test/resources/features</features>
+                            <plugin>
+                                <plugin>html:${cucumber.report.dir}/cucumber-report.html</plugin>
+                            </plugin>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
