--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>11</maven.compiler.release>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <lombok.version>1.18.34</lombok.version>
         <cucumber.report.dir>reports/cucumber-reports</cucumber.report.dir>
         <extent.report.dir>reports/extent-reports</extent.report.dir>
@@ -80,9 +81,8 @@
         </dependency>
         <dependency>
             <groupId>io.cucumber</groupId>
-            <artifactId>cucumber-junit</artifactId>
+            <artifactId>cucumber-testng</artifactId>
             <version>7.15.0</version>
-            <scope>test</scope>
         </dependency>
 
         <!-- Extent Reports -->
@@ -111,9 +111,6 @@
                 <configuration>
                     <source>11</source>
                     <target>11</target>
-                    <compilerArgs>
-                        <arg>-parameters</arg>
-                    </compilerArgs>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
@@ -124,7 +121,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Surefire Plugin for TestNG + Cucumber -->
+            <!-- Surefire Plugin for TestNG + Cucumber + ExtentReports -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -132,6 +129,9 @@
                 <configuration>
                     <forkedProcessTimeoutInSeconds>300</forkedProcessTimeoutInSeconds>
                     <useSystemClassLoader>false</useSystemClassLoader>
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
                     <systemPropertyVariables>
                         <cucumber.report.dir>${cucumber.report.dir}</cucumber.report.dir>
                         <extent.report.dir>${extent.report.dir}</extent.report.dir>
